# NFTicketsGearHackathon

./: .gitignore
backend/: .env  index.js  package-lock.json  package.json
backend/contract/: event.meta.wasm  event.opt.wasm
backend/src/: payloads.js  sendMesage.js
contracts/nftickets/: .binpath  Cargo.toml
contracts/nftickets/src/: io.rs  lib.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.scss  App.tsx
frontend/src/api/: functions.ts  payloads.ts
frontend/src/components/: index.ts
frontend/src/components/layout/header/: Header.tsx
frontend/src/components/layout/header/account/: Account.tsx
frontend/src/components/layout/header/navbar/: NavBar.tsx
frontend/src/components/popout/: PopOut.tsx  index.ts
frontend/src/pages/: index.tsx
frontend/src/pages/buy/: Buy.tsx
frontend/src/pages/home/: Home.tsx
frontend/src/pages/seeNFT/: SeeNFT.jsx  index.ts
next/: package-lock.json  package.json
next/components/: Layout.tsx  NavBar.tsx
next/components/Account/: Account.tsx
next/pages/: index.tsx
next/pages/api/gear/: deploy.ts
next/styles/: globals.css
utils/: Generate.py  Generator.py  imgUtils.py  wallet.py
